WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60475
Style fix: Function names must begin with lowercase letter.
https://bugs.webkit.org/show_bug.cgi?id=60475
Summary
Style fix: Function names must begin with lowercase letter.
Tony Gentilcore
Reported
2011-05-09 08:49:30 PDT
Style fix: Funciton names must begin with lowercase letter.
Attachments
Patch
(2.40 KB, patch)
2011-05-09 08:53 PDT
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2011-05-09 09:18 PDT
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Gentilcore
Comment 1
2011-05-09 08:53:35 PDT
Created
attachment 92796
[details]
Patch
Darin Adler
Comment 2
2011-05-09 09:09:16 PDT
Comment on
attachment 92796
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92796&action=review
> Source/WebCore/page/PageVisibilityState.h:47 > #if ENABLE(PAGE_VISIBILITY_API) > -String GetPageVisibilityStateString(PageVisibilityState); > +String getPageVisibilityStateString(PageVisibilityState); > #endif
If your intent is to fix to match WebKit project style, then the name should be: pageVisibilityStateString We only use “get” in functions with out arguments; functions that simply return a value use noun or adjective phrases.
Tony Gentilcore
Comment 3
2011-05-09 09:18:07 PDT
Created
attachment 92797
[details]
Patch
WebKit Commit Bot
Comment 4
2011-05-09 11:19:09 PDT
Comment on
attachment 92797
[details]
Patch Clearing flags on attachment: 92797 Committed
r86069
: <
http://trac.webkit.org/changeset/86069
>
WebKit Commit Bot
Comment 5
2011-05-09 11:19:14 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 6
2011-05-09 12:39:12 PDT
The commit-queue encountered the following flaky tests while processing
attachment 92797
[details]
: http/tests/xmlhttprequest/cross-origin-no-authorization.html
bug 33357
(author:
ap@webkit.org
) The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug