2011-05-09  Tony Gentilcore  <tonyg@chromium.org>

Reviewed by Darin Adler.

        Style fix: Function names must begin with lowercase letter and should not use "get".
        https://bugs.webkit.org/show_bug.cgi?id=60475

        * dom/Document.cpp:
        (WebCore::Document::webkitVisibilityState):
        * page/PageVisibilityState.cpp:
        (WebCore::pageVisibilityStateString): Renamed.
        * page/PageVisibilityState.h:

Canonical link: https://commits.webkit.org/75742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86069 268f45cc-cd09-0410-ab3c-d52691b4dbfc