Source/WebCore/page/PageVisibilityState.h
@@ -43,7 +43,7 @@ enum PageVisibilityState {
 };
 
 #if ENABLE(PAGE_VISIBILITY_API)
-String GetPageVisibilityStateString(PageVisibilityState);
+String pageVisibilityStateString(PageVisibilityState);
 #endif
 
 } // namespace WebCore
